refactored sevices and controllers